Correction d'orthographe template/tuto - #522

--- a/templates/tutorial/comment/edit.html
+++ b/templates/tutorial/comment/edit.html
@@ -17,7 +17,7 @@
 
 
 {% block headline %}
-    <h2>Editer le commentaire du tutoriel : {{ tutorial.title }}</h2>
+    <h2>Éditer le commentaire du tutoriel : {{ tutorial.title }}</h2>
 {% endblock %}
 
 
