--- a/templates/tutorial/index.html
+++ b/templates/tutorial/index.html
@@ -11,7 +11,7 @@
 
 {% block meta %}
     <meta name="description" content="Les tutoriels vous permettent d'apprendre
-    sur divers sujets axés autour de la programmation et de l'informatique." />
+    sur divers sujets tous plus intéressant les uns que les autres." />
 {% endblock %}
 
 
