--- a/templates/tutorial/part/edit.html
+++ b/templates/tutorial/part/edit.html
@@ -22,7 +22,7 @@
         {% if part.image %}
             <img src="{{part.image.thumb.url }}" alt="">
         {% endif %}
-        Editer la partie : {{ part.title }}
+        Éditer la partie : {{ part.title }}
     </h1>
 {% endblock %}
 
