--- a/templates/tutorial/part/view_online.html
+++ b/templates/tutorial/part/view_online.html
@@ -25,7 +25,7 @@
             <li><a href="#">{{ category.title }}</a></li>
         {% endfor %}
     </ul>
-    
+
     <div class="authors content-wrapper">
         <span class="authors-label">Auteurs : </span>
         <ul>
@@ -51,7 +51,7 @@
         <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
             <h3>Admin<span class="wide">istration</span></h3>
             <ul>
-                <li><a href="{{ part.tutorial.get_absolute_url }}">Version offline</a></li>
+                <li><a href="{{ part.tutorial.get_absolute_url }}">Version hors-ligne</a></li>
             </ul>
         </div>
     {% endif %}
