--- a/templates/tutorial/tutorial/edit.html
+++ b/templates/tutorial/tutorial/edit.html
@@ -14,7 +14,7 @@
         {% if tutorial.image %}
             <img src="{{tutorial.image.thumb.url }}" alt="">
         {% endif %}
-        Editer le tutoriel : {{ tutorial.title }}
+        Éditer le tutoriel : {{ tutorial.title }}
     </h1>
 {% endblock %}
 
