--- a/templates/tutorial/tutorial/history.html
+++ b/templates/tutorial/tutorial/history.html
@@ -64,7 +64,7 @@
                         <th></th>
                         <th width="25%">Date</th>
                         <th>Version</th>
-                        <th width="10%">Diff</th>
+                        <th width="10%">Diff.</th>
                         <th width="10%">Auteur</th>
                     </tr>
                 </thead>
