Amélioration du formulaire de connexion

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -990,6 +990,11 @@
 .content-wrapper {
     margin: 0 2%;
 }
+.small-content-wrapper {
+    width: 90%;
+    max-width: 500px;
+    margin: 20px auto;
+}
 
 
 /* ==============
