--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -15,34 +15,34 @@
 
 
 
-{% block headline %}
-    Se connecter
-{% endblock %}
-
-
-
 {% block breadcrumb %}
     <li>Connexion</li>
 {% endblock %}
 
 
 
-{% block content %}
-    {% if not user.is_authenticated %}
-        {% if error %}
-            <div class="alert-box warning">
-                {{ error }}
-            </div>
+{% block content_out %}
+    <section class="small-content-wrapper">
+        <h2>Connexion</h2>
+
+        {% if not user.is_authenticated %}
+            {% if error %}
+                <div class="alert-box warning">
+                    {{ error }}
+                </div>
+            {% endif %}
+
+            <p>
+                Si vous n'avez pas de compte, vous pouvez <a href="{% url "zds.member.views.register_view" %}" >vous inscrire</a>.
+            </p>
+
+            {% crispy form %}
+
+            <a href="{% url "zds.member.views.forgot_password" %}" class="form-sub-link">Mot de passe oublié ?</a>
+        {% else %}
+            <p>
+                Vous êtes déjà connecté.
+            </p>
         {% endif %}
-
-        <p>
-            Si vous n'avez pas de compte, vous pouvez <a href="{% url "zds.member.views.register_view" %}" >vous inscrire</a>.
-        </p>
-
-        {% crispy form %}
-    {% else %}
-        <p>
-            Vous êtes déjà connecté.
-        </p>
-    {% endif %}
+    </section>
 {% endblock %}
