--- a/assets/css/scss/_form.scss
+++ b/assets/css/scss/_form.scss
@@ -156,12 +156,13 @@
 
     .form-sub-link {
         display: block;
+        display: inline-block;
         margin-top: 8px;
     }
 
 
 
-
+ 
 
 
 
