--- a/templates/tutorial/validation/history.html
+++ b/templates/tutorial/validation/history.html
@@ -31,7 +31,7 @@
                     <th width="8%">Auteur(s)</th>
                     <th width="8%">Proposé</th>
                     <th width="8%">Validateur</th>
-                    <th width="8%">Réservé</th>
+                    <th width="8%">Statut</th>
                     <th width="8%">Action</th>
                 </tr>
             </thead>
@@ -70,9 +70,9 @@
                             {% elif validation.is_pending_valid %}
                                 <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Se retirer</a>
                             {% elif validation.is_accept %}
-                                <span>Accepter</span>
+                                <span>Accepté</span>
                             {% elif validation.is_reject %}
-                                <span>Rejeter</span>
+                                <span>Rejeté</span>
                             {% endif %}
                         </td>
                     </tr>
