--- a/templates/tutorial/member/index.html
+++ b/templates/tutorial/member/index.html
@@ -4,7 +4,7 @@
 
 
 {% block sidebar_actions %}
-    <li><a href="{% url "zds.tutorial.views.import_tuto" %}">Importer</a></li>
+    <li><a href="{% url "zds.tutorial.views.import_tuto" %}" class="ico-after import blue">Importer</a></li>
 {% endblock %}
 
 
