--- a/templates/tutorial/tutorial/view_online.html
+++ b/templates/tutorial/tutorial/view_online.html
@@ -1,4 +1,4 @@
-{% extends "tutorial/base.html" %}
+{% extends "tutorial/base_online.html" %}
 {% load emarkdown %}
 {% load humanize %}
 {% load profile %}
@@ -54,18 +54,18 @@
 
 
 {% block sidebar_blocs %}
-    {% if perms.tutorial.change_tutorial%}
-    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
-        <h3>Admin<span class="wide">istration</span></h3>
-        <ul>
-            <li><a href="{{ tutorial.get_absolute_url }}" class="ico-after arrow-right blue" >Version hors-ligne</a></li>
-            <li><a href="{% url "zds.tutorial.views.history_validation" tutorial.pk %}">Historique validation</a></li>
-            <li><a href="{% url "zds.tutorial.views.invalid_tutorial" tutorial.pk %}">Dépublier</a>
-        </ul>
-    </div>
-    {% endif %}
-
     {% include "tutorial/includes/summary.html" %}
+
+    {% if perms.tutorial.change_tutorial %}
+        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administration">
+            <h3>Admin<span class="wide">istration</span></h3>
+            <ul>
+                <li><a href="{{ tutorial.get_absolute_url }}" class="ico-after arrow-right blue" >Version hors-ligne</a></li>
+                <li><a href="{% url "zds.tutorial.views.history_validation" tutorial.pk %}">Historique validation</a></li>
+                <li><a href="{% url "zds.tutorial.views.invalid_tutorial" tutorial.pk %}">Dépublier</a>
+            </ul>
+        </div>
+    {% endif %}
 
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
         <h3>Télécharger</h3>
