--- a/templates/tutorial/member/online.html
+++ b/templates/tutorial/member/online.html
@@ -1,4 +1,4 @@
-{% extends "tutorial/base.html" %}
+{% extends "tutorial/base_online.html" %}
 {% load humanize %}
 {% load profile %}
 {% load emarkdown %}
