Ajout du sommaire hors ligne + bugfix

--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -44,7 +44,7 @@
             </div>
         {% endif %}
 
-        {% block sidebar_blocs %}{% endblock %}
+        {% block sidebar_blocks %}{% endblock %}
 
         {% if tutorial %}
             <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
