--- a/templates/tutorial/validation/index.html
+++ b/templates/tutorial/validation/index.html
@@ -22,7 +22,7 @@
 
 
 {% block sidebar_new_tutorial %}{% endblock %}
-{% block sidebar_blocs %}
+{% block sidebar_blocks %}
     <h3>Filtres</h3>
     <ul>
         <li>
