--- a/templates/tutorial/member/index.html
+++ b/templates/tutorial/member/index.html
@@ -19,7 +19,7 @@
 
 
 
-{% block sidebar_blocs %}
+{% block sidebar_blocks %}
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
         <h3>Filtres</h3>
         <ul>
