--- a/templates/tutorial/tutorial/view.html
+++ b/templates/tutorial/tutorial/view.html
@@ -82,18 +82,6 @@
 
     <li><a href="{% url "zds.tutorial.views.history" tutorial.pk tutorial.slug %}" class="ico-after history blue">Historique des versions</a>
 
-    {% if not tutorial.on_line %}
-        <li>
-            <a href="#delete-chapter" class="open-modal ico-after cross red">Supprimer le tutoriel</a>
-            <form action="{% url "zds.tutorial.views.delete_tutorial" tutorial.pk %}" id="delete-chapter" class="modal modal-medium" method="get">
-                <p>
-                    Attention, vous vous apprêtez à supprimer définitivement le tutoriel "<em>{{ tutorial.title }}</em>".
-                </p>
-                <button type="submit">Confirmer</button>
-            </form>
-        </li>
-    {% endif %}
-
     {% if not tutorial.in_validation %}
         <li>
             <a href="#ask-validation" class="open-modal ico-after tick green">
@@ -109,7 +97,7 @@
 
 
 
-{% block sidebar_blocs %}
+{% block sidebar_blocks %}
     {% if perms.tutorial.change_tutorial%}
         <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Validation">
             <h3>Validation</h3>
@@ -134,6 +122,25 @@
                         </div>
                     </li>
                 {% endif %}
+            </ul>
+        </div>
+    {% endif %}
+
+    {% include "tutorial/includes/summary.part.html" %}
+
+    {% if not tutorial.on_line %}
+        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Suppression">
+            <h3>Suppression</h3>
+            <ul>
+                <li>
+                    <a href="#delete-chapter" class="open-modal ico-after cross red">Supprimer le tutoriel</a>
+                    <form action="{% url "zds.tutorial.views.delete_tutorial" tutorial.pk %}" id="delete-chapter" class="modal modal-medium" method="get">
+                        <p>
+                            Attention, vous vous apprêtez à <strong>supprimer définitivement</strong> le tutoriel "<em>{{ tutorial.title }}</em>".
+                        </p>
+                        <button type="submit">Confirmer</button>
+                    </form>
+                </li>
             </ul>
         </div>
     {% endif %}
