Multiples corrections des tutoriels

--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -587,7 +587,7 @@
     h4 {
         font-weight: normal;
         margin: 0;
-        padding: 0 0 0 2.5%;
+        padding: 0;
     }
     h3 {
         font-size: 18px;
@@ -853,7 +853,7 @@
         color: #999;
         margin-top: -15px;
         margin-bottom: 15px;
-        padding: 10px 2%;
+        padding: 10px 0;
         font-weight: normal;
         border-bottom: 1px solid #EEE;
     }
