--- a/templates/tutorial/tutorial/view.html
+++ b/templates/tutorial/tutorial/view.html
@@ -25,6 +25,10 @@
         {{ tutorial.title }}
     </h1>
 
+    <h3 class="subtitle">
+        {{ tutorial.description }}
+    </h3>
+
     <ul class="taglist">
         {% for category in tutorial.subcategory.all %}
             {# TODO : ajouter les liens des tags #}
@@ -45,7 +49,7 @@
 
     {% if tutorial.in_beta and tutorial.sha_beta == version %}
         <div class="content-wrapper">
-            <div class="alert-box warning">
+            <div class="warning ico-after">
                 Attention, cette version du tutoriel est en BETA
             </div>
         </div>
@@ -54,8 +58,45 @@
 
 
 
-{% block headline_sub %}
-    {{ tutorial.description }}
+{% block content %}
+    {% with tuto_version=tutorial|repo_tuto:version %}
+        {% if tuto_version.introduction %}
+            {{ tuto_version.introduction|emarkdown }}
+        {% else %}
+            <p class="warning ico-after">Il n'y a pas d'introduction.</p>
+        {% endif %}
+
+        {% if tutorial.is_mini %}
+            {# Small tutorial #}
+
+            {% include "tutorial/includes/chapter.part.html" with authors=tutorial.authors.all %}
+        {% else %}
+            {# Large tutorial #}
+
+            <hr />
+            {% if parts %}
+                {% for part in parts %}
+                    <h2>
+                        <a href="{% url "view-part-url" tutorial.pk tutorial.slug part.slug %}{%if version %}?version={{version}}{% endif %}">
+                            Partie {{ part.position_in_tutorial }} : {{ part.title }}
+                        </a>
+                    </h2>
+                {% endfor %}
+            {% else %}
+                <p class="warning ico-after">
+                    Il n'y a actuellement aucune partie dans ce tutoriel.
+                </p>
+            {% endif %}
+            <hr />
+
+        {% endif %}
+
+        {% if tuto_version.conclusion %}
+            {{ tuto_version.conclusion|emarkdown }}
+        {% else %}
+            <p class="warning ico-after">Il n'y a pas de conclusion.</p>
+        {% endif %}
+    {% endwith %}
 {% endblock %}
 
 
@@ -144,47 +185,4 @@
             </ul>
         </div>
     {% endif %}
-{% endblock %}
-
-
-
-{% block content %}
-    {% with tuto_version=tutorial|repo_tuto:version %}
-        {% if tuto_version.introduction %}
-            {{ tuto_version.introduction|emarkdown }}
-        {% else %}
-            <p>Aucune introduction.</p>
-        {% endif %}
-
-        {% if tutorial.is_mini %}
-            {# Small tutorial #}
-
-            {% include "tutorial/includes/chapter.part.html" with authors=tutorial.authors.all %}
-        {% else %}
-            {# Large tutorial #}
-
-            <hr />
-            {% if parts %}
-                {% for part in parts %}
-                    <h2>
-                        <a href="{% url "view-part-url" tutorial.pk tutorial.slug part.slug %}{%if version %}?version={{version}}{% endif %}">
-                            Partie {{ part.position_in_tutorial }} : {{ part.title }}
-                        </a>
-                    </h2>
-                {% endfor %}
-            {% else %}
-                <p>
-                    Il n'y a actuellement aucune partie dans ce tutoriel.
-                </p>
-            {% endif %}
-            <hr />
-
-        {% endif %}
-
-        {% if tuto_version.conclusion %}
-            {{ tuto_version.conclusion|emarkdown }}
-        {% else %}
-            <p>Aucune conclusion.</p>
-        {% endif %}
-    {% endwith %}
 {% endblock %}
