--- a/templates/tutorial/part/view.html
+++ b/templates/tutorial/part/view.html
@@ -35,7 +35,7 @@
     <div class="authors">
         <span class="authors-label">Auteurs : </span>
         <ul>
-            {% for member in tutorial.authors.all %}
+            {% for member in part.tutorial.authors.all %}
                 <li>
                     {% include "misc/member_item.part.html" with avatar=True %}
                 </li>
@@ -43,10 +43,10 @@
         </ul>
     </div>
 
-    {% if tutorial.in_beta and tutorial.sha_beta == version %}
+    {% if part.tutorial.in_beta and part.tutorial.sha_beta == version %}
         <div class="content-wrapper">
             <div class="alert-box warning">
-                Attention, cette version du tutoriel est en BETA
+                Attention, cette version du tutoriel est en BETA !
             </div>
         </div>
     {% endif %}
@@ -65,7 +65,7 @@
         <ul>
             {% for chapter in part.chapters %}
                 <li>
-                    <h3><a href="{% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}?version={{version}}">{{ chapter.title }}</a></h3>
+                    <h3><a href="{% url "view-chapter-url" part.tutorial.pk part.tutorial.slug part.slug chapter.slug %}?version={{version}}">{{ chapter.title }}</a></h3>
                 </li>
             {% endfor %}
         </ul>
