--- a/templates/tutorial/tutorial/view.html
+++ b/templates/tutorial/tutorial/view.html
@@ -50,7 +50,7 @@
     {% if tutorial.in_beta and tutorial.sha_beta == version %}
         <div class="content-wrapper">
             <div class="warning ico-after">
-                Attention, cette version du tutoriel est en BETA
+                Attention, cette version du tutoriel est en BETA !
             </div>
         </div>
     {% endif %}
