--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -136,10 +136,10 @@
             <div class="mobile-menu-bloc mobile-all-links" data-title="Flux">
                 <h3>Flux</h3>
                 <ul>
-                    <li><a href="{% url "post-feed-rss" %}">Nouveaux messages (RSS)</a></li>
-                    <li><a href="{% url "post-feed-atom" %}">Nouveaux messages (ATOM)</a></li>
-                    <li><a href="{% url "topic-feed-rss" %}">Nouveaux sujets (RSS)</a></li>
-                    <li><a href="{% url "topic-feed-atom" %}">Nouveaux sujets (ATOM)</a></li>
+                    <li><a href="{% url "post-feed-rss" %}" class="ico-after rss blue">Nouveaux messages (RSS)</a></li>
+                    <li><a href="{% url "post-feed-atom" %}" class="ico-after rss blue">Nouveaux messages (ATOM)</a></li>
+                    <li><a href="{% url "topic-feed-rss" %}" class="ico-after rss blue">Nouveaux sujets (RSS)</a></li>
+                    <li><a href="{% url "topic-feed-atom" %}" class="ico-after rss blue">Nouveaux sujets (ATOM)</a></li>
                 </ul>
             </div>
         {% endif %}
